@@ -1,25 +1,24 @@
 package bonqa.security;
 
-import org.springframework.web.cors.CorsConfiguration;
-
 import java.util.Arrays;
 import java.util.List;
+import org.springframework.web.cors.CorsConfiguration;
 
 public class CorsConfigurationBuilder {
 
-  public static CorsConfiguration buildConfiguration() {
-    CorsConfiguration corsConfiguration = new CorsConfiguration();
-    corsConfiguration.setAllowedOrigins(List.of("http://localhost:3000"));
-    corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
-    corsConfiguration.setAllowedHeaders(Arrays.asList(
-        "Authorization",
-        "Content-Type",
-        "Access-Control-Allow-Origin",
-        "Access-Control-Allow-Headers",
-        "Access-Control-Request-Method",
-        "Access-Control-Request-Headers"));
-    corsConfiguration.setAllowCredentials(true);
-    corsConfiguration.setMaxAge(3600L);
-    return corsConfiguration;
-  }
+    public static CorsConfiguration buildConfiguration() {
+        CorsConfiguration corsConfiguration = new CorsConfiguration();
+        corsConfiguration.setAllowedOrigins(List.of("http://localhost:3000"));
+        corsConfiguration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        corsConfiguration.setAllowedHeaders(Arrays.asList(
+                "Authorization",
+                "Content-Type",
+                "Access-Control-Allow-Origin",
+                "Access-Control-Allow-Headers",
+                "Access-Control-Request-Method",
+                "Access-Control-Request-Headers"));
+        corsConfiguration.setAllowCredentials(true);
+        corsConfiguration.setMaxAge(3600L);
+        return corsConfiguration;
+    }
 }
